# xxOpenGL

./: CMakeLists.txt  README.md
doc/: xxOpenGL.drawio
xxGL/: CMakeLists.txt  xxGL.hpp  xxGLProgram.cpp  xxGLShader.cpp  xxGLVAO.cpp
xxOpenGL/: CMakeLists.txt  xxOpenGL.cpp
